# levenshtein-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BENCHMARK.md  README.md  benchmark.py  codecov.yml  pdm_build.py  pyproject.toml
.github/actions/get-python-version/: action.py  action.yml
.github/actions/restore-pdm/: action.py  action.yml
.github/actions/run-test-report-coverage/: action.yml
.github/workflows/: ci.yml  lint.yml  pr-automerge.yml  publish.yml  update-deps.yml
src/levdist/: __init__.py  classic.py  native.c
src/levenshtein_py/: __init__.py  full_matrix.py  mypyc.py  native.c  recursive.py  two_rows.py  wagner_fischer_cython.py
tests/: test_algo.py  test_distance.py
