[project]
name = "levenshtein-py"
dynamic = ["version"]
description = "Levenstein package"
authors = [{ name = "Dmitry Erlikh", email = "derlih@gmail.com" }]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
keywords = ["levenstein", "edit distance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/derlih/levenshtein-py"
Issues = "https://github.com/derlih/levenshtein-py/issues"

[build-system]
requires = ["pdm-backend", "setuptools"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
test = ["pytest>=8.3.2", "coverage>=7.6.1", "pytest-cov>=5.0.0"]
lint = ["pre-commit>=3.5.0", "mypy>=1.11.1"]
benchmark = [
    "pylev>=1.4.0",
    "Levenshtein>=0.25.1",
    "python-Levenshtein>=0.25.1",
    "leven>=1.0.4",
    "typer>=0.12.4",
]

[tool.pdm.scripts]
test = "pytest"
lint = "pre-commit run --all-files"
mypy = "mypy src"
benchmark = "python benchmark.py"

test-cov.composite = ["pytest --cov src", "python -m coverage xml"]

[tool.mypy]
strict = true
exclude = ["tests"]

[tool.coverage.run]
branch = true
omit = ["tests"]
